Unreviewed, suppress exception check warning https://bugs.webkit.org/show_bug.cgi?id=245354

When clearExceptionExceptTermination is called, we should treat it as "exception is checked".

* Source/JavaScriptCore/runtime/CatchScope.h:
(JSC::CatchScope::clearExceptionExceptTermination):

Canonical link: https://commits.webkit.org/254628@main